[Fix] - Small fix on mobile

--- a/cb-softplan/src/styles/03_components/_cards.scss
+++ b/cb-softplan/src/styles/03_components/_cards.scss
@@ -59,6 +59,11 @@
         @media #{$mobile} {
             width: 100%;
             margin: 1em 0;
+
+            .MuiButton-text {
+                padding: 0;
+                min-width: unset;
+            }
         }
 
         svg {
